Tools/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector: 
        "beta.kubernetes.io/os": linux
      containers:
      - name: redis
        image: redis:latest
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 80Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: LoadBalancer
  ports:
  - port: 6379
  selector:
    app: redis
