Tools/k8s/public-api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publicapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - twitchsoft.northeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: twitchsoft.northeurope.cloudapp.azure.com
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: twitchsoftpublicapi
            port:
              number: 80
